<?xml version="1.0"?>
<package format="2">
  <name>prm_localization</name>
  <version>0.0.0</version>
  <description>The prm_localization package</description>

  <maintainer email="lzyplayer@stu.xjtu.edu.cn">vickylzy</maintainer>  <!-- One license tag required, multiple allowed, one license per tag -->

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_msgs</depend>
  <depend>tf_conversions</depend>
  <depend>ndt_omp</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>
  <depend>message_generation</depend>

  <build_depend>eigen</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_export_depend>eigen</build_export_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>


</package>
<!--
<build_depend>nodelet</build_depend>
<build_depend>roscpp</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>rospy</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>pcl_ros</build_depend>
<build_depend>pcl_msgs</build_depend>
<build_depend>tf_conversions</build_depend>
<build_depend>ndt_omp</build_depend>
<build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>dbw_mkz_msgs</build_depend>

<build_export_depend>nodelet</build_export_depend>
<build_export_depend>roscpp</build_export_depend>
<build_export_depend>std_msgs</build_export_depend>
<build_export_depend>rospy</build_export_depend>
<build_export_depend>sensor_msgs</build_export_depend>
<build_export_depend>pcl_ros</build_export_depend>
<build_export_depend>pcl_msgs</build_export_depend>
<build_export_depend>tf_conversions</build_export_depend>
<build_export_depend>ndt_omp</build_export_depend>
<build_export_depend>tf</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>dbw_mkz_msgs</build_export_depend>

<exec_depend>nodelet</exec_depend>
<exec_depend>roscpp</exec_depend>
<exec_depend>std_msgs</exec_depend>
<exec_depend>rospy</exec_depend>
<exec_depend>sensor_msgs</exec_depend>
<exec_depend>pcl_ros</exec_depend>
<exec_depend>pcl_msgs</exec_depend>
<exec_depend>tf_conversions</exec_depend>
<exec_depend>ndt_omp</exec_depend>
<exec_depend>tf</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>dbw_mkz_msgs</exec_depend>-->